Fixed alignment if logo and company name. Removed background colour from blog post images.

--- a/css/blog.less
+++ b/css/blog.less
@@ -56,7 +56,6 @@
 .blog-post-feature-image-wrap {
 	background-size: contain;
 	background-position: center;
-	background-color: lighten(@color-swatch5, 65%);
 	height: 100%;
 	max-height: 100%;
 	position: absolute;
