--- a/stylesheet.less
+++ b/stylesheet.less
@@ -222,7 +222,7 @@ pre {
 	}
 	&.logo {
 		max-width: 30%;
-		vertical-align: top;
+		vertical-align: middle;
 		@media @mobile {
 			margin-bottom: 12px;
 			max-width: 100%;
